[package]
name = "quadrant_next"
version = "25.2.2"
description = "An easy way to manage your Minecraft mods and modpacks"
authors = ["Demir Yerli <me@mrquantumoff.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "quadrant_next_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["proprietary"]
telemetry = []
curseforge = []
# Quadrant ID/Sync/Share
quadrant_id = []
proprietary = ["telemetry", "curseforge", "quadrant_id"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = ["tray-icon", "config-json5"] }
tauri-plugin-opener = "2.2.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
chrono = { version = "0.4.39", features = ["serde"] }
anyhow = { version = "1.0.95" }
dirs = "6.0.0"
log = "0.4.25"
tauri-plugin-fs = { version = "2.2.0", features = ["watch"] }
tauri-plugin-os = "2.2.0"
rss = "2.0.11"
tauri-plugin-store = "2.2.0"
uuid = { version = "1.13.1", features = ["v7"] }
tauri-plugin-http = "2.3.0"
tokio = { version = "1.43.0", features = ["full"] }
urlencoding = "2.1.3"
open = "5.3.2"
futures = { version = "0.3.31" }
sha1 = "0.10.6"
hex = "0.4.3"
colog = "1.3.0"
tauri-plugin-deep-link = "2.2.0"
tauri-plugin-dialog = "2.2.0"
keyring = { version = "3.6.1", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
] }
tauri-plugin-clipboard-manager = "2.2.1"
tauri-plugin-notification = "2.2.1"
tauri-plugin-persisted-scope = "2.2.0"
http-cache-reqwest = { version = "0.15.1", default-features = false, features = [
    "manager-moka",
] }
reqwest-middleware = "0.4.0"
tauri-plugin-devtools = "2.0.0"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.2.0"
tauri-plugin-cli = "2.2.0"
tauri-plugin-updater = "2.5.0"
tauri-plugin-single-instance = { version = "2.2.1", features = ["deep-link"] }

[profile.dev]
opt-level = 0
overflow-checks = false

[profile.release]
opt-level = 3
overflow-checks = true
codegen-units = 1
lto = "fat"
